fix: resolve text alignment bug. - set property to center

--- a/src/commons/Button/Button.module.scss
+++ b/src/commons/Button/Button.module.scss
@@ -30,6 +30,7 @@
     font-size: var.$body-regular;
     color: var.$black;
     width: 172px;
+    text-align: center;
 
     box-shadow: none;
     border: 2px black solid;
